# otus_homework_blog

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: b565b9ad1a5f_создание_таблицы_tags.py  ee42e8b215ce_создание_таблиц.py
my_blog/: __init__.py  app.py  config.py  database.py  exceptions.py  main.py  templates.py
my_blog/fixtures/: initial_data.py
my_blog/models/: post.py  tag.py  user.py
my_blog/posts/: dao.py  exceptions.py  models.py  router.py  schemas.py
my_blog/tags/: dao.py  exceptions.py  models.py  router.py
my_blog/templates/: base.html  fran.html  index.html  show_program.html  training.html  training_programs.html
my_blog/templates/auth/: login.html  register.html
my_blog/templates/posts/: create_post.html  show_program.html  training_programs.html  update_post.html
my_blog/templates/tags/: tag_processing.html  update_tag.html
my_blog/users/: auth.py  dao.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py
