[project]
name = "otus-homework-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["my_blog"]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[project.scripts]
my_blog = "my_blog.main:main"
